Update register controller and set up accesstoken, refreshtoken

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,1 +1,5 @@
 MONGODB_URL = mongodb+srv://nhatminh2000:nhatminh2000@tiny-social.stvdd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+ACCESS_TOKEN_SECRET = accesstokensecret4122000
+
+REFRESH_TOKEN_SECRET = refreshtokensecret4122000
