Update cookie and finish register controller

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://nhatminh2000:nhatminh2000@tiny-social.stvdd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://nhatminh2000:nhatminh2000@tiny-social.stvdd.mongodb.net/TinySocialDB?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = accesstokensecret4122000
 
