Update and done login/register

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,5 +1,19 @@
 MONGODB_URL = mongodb+srv://nhatminh2000:nhatminh2000@tiny-social.stvdd.mongodb.net/TinySocialDB?retryWrites=true&w=majority
 
+
 ACCESS_TOKEN_SECRET = accesstokensecret4122000
 
 REFRESH_TOKEN_SECRET = refreshtokensecret4122000
+
+ACTIVATION_TOKEN_SECRET = activationtokensecret4122000
+
+
+MAILING_SERVICE_CLIENT_ID = 320094099877-fgia0vrbr01nj6g9jdjo2irepp97k3vp.apps.googleusercontent.com
+
+MAILING_SERVICE_CLIENT_SECRET = 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
+
+MAILING_SERVICE_REFRESH_TOKEN = 1//04JFx90VoaUaTCgYIARAAGAQSNwF-L9IroqVVJX2iflVeYsqNHCnBFz_mqTmabAsAlmDrB_q8EY_IQMQG1-XAO6aKrv25uvkD7Xc
+
+SENDER_EMAIL_ADDRESS = nhatminh5331@gmail.com
+
+CLIENT_URL = http://localhost:3000
