Update Category va CRUD Post

--- a/back-end/.env
+++ b/back-end/.env
@@ -2,19 +2,22 @@ MONGODB_URL = mongodb+srv://nhatminh2000:nhatminh2000@tiny-social.stvdd.mongodb.
 
 
 ACCESS_TOKEN_SECRET = accesstokensecret4122000
-
 REFRESH_TOKEN_SECRET = refreshtokensecret4122000
-
 ACTIVATION_TOKEN_SECRET = activationtokensecret4122000
 
 
 CLIENT_URL = http://localhost:3000
 
+
 MAILING_SERVICE_CLIENT_ID = 1087734019966-n4i3g77rf0t8ceb9enllf4j68o9rh7n3.apps.googleusercontent.com
-
 MAILING_SERVICE_CLIENT_SECRET = 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
-
 MAILING_SERVICE_REFRESH_TOKEN = 1//04SmTe2F_AL7rCgYIARAAGAQSNwF-L9Ir6g5GLw3OmDubyb88ScX0vbHwRaDfchBV6ERIiRf8Skzhsw_0GcBFkY8nGeCkvddskks
 
+
 SENDER_EMAIL_ADDRESS = nhatminh5331@gmail.com
+
+
+CLOUD_NAME = gamemortal
+CLOUD_API_KEY = 538631594836879
+CLOUD_API_SECRET = x6ZiTAVAx3TqfojdarLxRsJ5qjg
 
