--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,7 +20,8 @@
     "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
